fixed fund button gap

--- a/src/components/Header/ProfileInfo/ProfileInfo.module.scss
+++ b/src/components/Header/ProfileInfo/ProfileInfo.module.scss
@@ -5,11 +5,11 @@
     position: relative;
 }
 
-.balance {
+.fund {
     background-color: var(--white-color);
     padding: 8px 16px;
     border-radius: 16px;
     display: flex;
-    gap: 10px;
+    gap: 24px;
     align-items: center;
 }
